# OOP_Lab4

./: CMakeLists.txt
include/: figure.h  figure_array.h  hexagon.h  octagon.h  pentagon.h  point.h
src/: main.cpp
tests/: test.cpp
